fix some style on tablet

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1122,7 +1122,6 @@ input:focus {
 
 @media (min-width: 768px) and (max-width: 1023px) {
   .header-nav > li.expand > a::after {
-    content: url("https://assets.phalconphp.com/phalcon/images/svg/arrow.svg");
     top: 0; }
   .header {
     height: 66px;
